--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ file(GLOB SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/src/IDKGraphics/animation/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/IDKGraphics/camera/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/IDKGraphics/render/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/IDKGraphics/render/idk_batch_system/*.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/IDKGraphics/batching/*.cpp
 )
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
 
@@ -28,4 +28,21 @@ set_target_properties(
 target_link_libraries(
     ${PROJECT_NAME} PUBLIC
     libidk
+)
+
+target_sources(
+    ${PROJECT_NAME} PUBLIC FILE_SET HEADERS
+
+    BASE_DIRS
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/IDKGraphics/
+
+    FILES
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/IDKGraphics/IDKGraphics.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/IDKGraphics/idk_renderengine.hpp
+)
+
+install(
+    TARGETS ${PROJECT_NAME}
+    DESTINATION ${CMAKE_SOURCE_DIR}/build/include/IDKGraphics/
+    FILE_SET HEADERS
 )
