--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ file(GLOB SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/src/IDKGraphics/camera/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/IDKGraphics/render/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/IDKGraphics/batching/*.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/IDKGraphics/UI/*.cpp
 )
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
 
@@ -22,10 +23,13 @@ set_target_properties(
 # else()
 #     target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
 # endif()
+find_package(SDL2_ttf REQUIRED)
+include_directories(${SDL2_ttf_INCLUDE_DIRS})
 
 
 target_link_libraries(
     ${PROJECT_NAME} PUBLIC
+    SDL2_ttf
     libidk
 )
 
