Improved the build process

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,3 +45,8 @@ FILE(
     COPY ${CMAKE_CURRENT_SOURCE_DIR}/IDKGE/
     DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/IDKGE/
 )
+
+FILE(
+    COPY ${CMAKE_CURRENT_SOURCE_DIR}/assets/
+    DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/assets/
+)
